# core-contracts

./: .gitignore  CODEOWNERS  CONTRACTS  Cargo.toml  Dockerfile  README.md  build-in-docker.sh  build_all.sh
.buildkite/: pipeline.yml
contact-builder/: Dockerfile
epoch-teller/: Cargo.toml  README.md  build.sh
epoch-teller/res/: epoch_teller.wasm
epoch-teller/src/: lib.rs
exchange-deposit-receiver/: Cargo.toml  README.md  build.sh
exchange-deposit-receiver/res/: exchange_deposit_receiver.wasm
exchange-deposit-receiver/src/: lib.rs
fake-voting/: Cargo.toml  build.sh
fake-voting/src/: lib.rs
fake-voting/src/tests/: test_utils.rs
fast-fun-token/: Cargo.toml  README.md  build.sh
fast-fun-token/res/: fast_fun_token.wasm
fast-fun-token/src/: lib.rs
generic-factory/: Cargo.toml  README.md  build.sh
generic-factory/res/: generic_factory.wasm
generic-factory/src/: lib.rs
generic-factory/tests/: test_basics.rs
lockup/: Cargo.toml  README.md  build.sh  build_docker.sh
lockup-factory/: .gitignore  Cargo.toml  README.md  build.sh  build_docker.sh
lockup-factory/res/: lockup_factory.wasm
lockup-factory/src/: lib.rs  types.rs  utils.rs
lockup-factory/src/tests/: test_utils.rs
lockup/res/: lockup_contract.wasm
lockup/src/: callbacks.rs  foundation.rs  foundation_callbacks.rs  gas.rs  getters.rs  internal.rs  lib.rs  owner.rs  owner_callbacks.rs  types.rs
lockup/src/tests/: test_utils.rs
lockup/tests/: spec.rs  utils.rs
lockup/tests/res/: fake_voting.wasm  whitelist.wasm
multisig/: Cargo.toml  README.md  build.sh  build_docker.sh
multisig-factory/: Cargo.toml  README.md  build.sh
multisig-factory/res/: multisig_factory.wasm
multisig-factory/src/: lib.rs
multisig/res/: minify.sh  multisig-o.wasm  multisig.wasm
multisig/src/: lib.rs
multisig/tests/: general.rs
multisig2/: Cargo.toml  README.md  build.sh  test.sh
multisig2-factory/: Cargo.toml  README.md  build.sh
multisig2-factory/res/: multisig2_factory.wasm
multisig2-factory/src/: lib.rs
multisig2/res/: multisig.wasm  multisig2.wasm
multisig2/src/: lib.rs
multisig2/tests/: general.rs
nft-simple/: Cargo.toml  build.sh  test.sh
nft-simple/res/: fungible_token.wasm  nft_simple.wasm  test_exquisite_corpse.wasm  test_nft.wasm
nft-simple/src/: internal.rs  lib.rs  metadata.rs  mint.rs  nft_core.rs  nft_metadata.rs  token.rs
nft-simple/test-contracts/: README.md
nft-simple/test-contracts/exquisite-corpse/: Cargo.toml  build.sh
nft-simple/test-contracts/exquisite-corpse/src/: lib.rs
nft-simple/test-contracts/test-nft/: Cargo.toml  build.sh
nft-simple/test-contracts/test-nft/src/: lib.rs
nft-simple/tests/sim/: main.rs
res/: staking_contract.wasm
safe-based-fungible-token/: Cargo.toml  README.md  build.sh
safe-based-fungible-token/res/: safe_based_fungible_token.wasm
safe-based-fungible-token/src/: lib.rs
scripts/: CONTRACTS  CONTRACT_WASM_NAMES  README.md  build_all.sh  build_all_docker.sh  build_docker.sh  contracts.json  deploy_core.sh  deploy_lockup.sh  deploy_old_lockup.sh  test_all.sh
scripts/deploy/: deploy_staking_pool_factory.sh  deploy_voting.sh  deploy_whitelist.sh
scripts/tests/: test_voting.sh
src/: lib.rs  test_utils.rs
staking-pool/: Cargo.toml  README.md  build.sh  build_docker.sh  test.sh
staking-pool-factory/: Cargo.toml  README.md  build.sh  build_docker.sh
staking-pool-factory/res/: staking_pool_factory.wasm
staking-pool-factory/src/: lib.rs
staking-pool-factory/src/tests/: test_utils.rs
staking-pool-factory/tests/: spec.rs  utils.rs
staking-pool-shares/: Cargo.toml  README.md  build.sh
staking-pool-shares/res/: staking_pool_with_shares.wasm
staking-pool-shares/src/: lib.rs  test_utils.rs
staking-pool-slots/: Cargo.toml  build.sh
staking-pool-slots/res/: staking_contract_with_slots.wasm
staking-pool/res/: staking_contract.wasm  staking_pool.wasm
staking-pool/src/: internal.rs  lib.rs  test_utils.rs  utils.rs
staking-pool/tests/: general.rs  quickcheck.rs  utils.rs
state-cleanup/: Cargo.toml  README.md  build.sh
state-cleanup/res/: state_cleanup.wasm
state-cleanup/src/: lib.rs
state-manipulation/: .gitignore  Cargo.toml  README.md  build.sh
state-manipulation/res/: state_cleanup.wasm  state_manipulation.wasm  state_replace.wasm
state-manipulation/src/: lib.rs
state-replace/: README.md  build.sh
state-replace/res/: state_manipulation.wasm
state-replace/src/: lib.rs
uniswap/: Cargo.toml  README.md  build.sh
uniswap/res/: uniswap.wasm
uniswap/src/: lib.rs
voting/: Cargo.toml  README.md  build.sh  build_docker.sh
voting-contract/: Cargo.toml  LICENSE  README.md  build.sh
voting-contract/res/: voting_contract.wasm
voting-contract/src/: lib.rs
voting/res/: voting_contract.wasm
voting/src/: lib.rs
w-near/: Cargo.toml  README.md  build.sh  build_docker.sh
w-near-141/: Cargo.toml
w-near-141/res/: w_near.wasm
w-near-141/src/: fungible_token_metadata.rs  internal.rs  lib.rs  storage_manager.rs  w_near.rs
w-near-nep-21/: Cargo.toml
w-near-nep-21/res/: w_near.wasm
w-near-old/: Cargo.toml  flags.sh
w-near/res/: legacy_w_near.wasm  w_near.wasm  w_near_defi.wasm
w-near/src/: fungible_token.rs  fungible_token_internal.rs  legacy_storage.rs  lib.rs  w_near.rs  w_near_internal.rs
w-near/test-w-near-defi/: Cargo.toml
w-near/test-w-near-defi/src/: lib.rs
w-near/tests/: mod.rs
w-near/tests/workspaces/: main.rs  test_legacy.rs  test_storage.rs  test_transfer.rs  test_w_near.rs  utils.rs
whitelist/: Cargo.toml  README.md  build.sh  build_docker.sh
whitelist/res/: whitelist.wasm
whitelist/src/: lib.rs
whitelist/src/tests/: test_utils.rs
