[package]
name = "staking-contract"
version = "0.1.0"
authors = ["Illia Polosukhin <ilblackdragon@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.45"
borsh = "0.6.0"
near-sdk = "0.7.0"
wee_alloc = { version = "0.4.5", default-features = false, features = [] }
bs58 = "0.3.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

