[package]
name = "lockup-factory"
version = "0.2.1"
authors = ["Angelblock <angelblock@starduststaking.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
near-sdk = "4.0.0-pre.1"
hex = "0.4"
