[package]
name = "lockup-contract"
version = "3.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
uint = { version = "0.8.3", default-features = false }

[dev-dependencies]
near-sdk-sim = "3.2.0"
quickcheck = "0.9"
quickcheck_macros = "0.9"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
