[package]
name = "multisig"
version = "0.1.0"
authors = ["Illia Polosukhin <ilblackdragon@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
borsh = "*"
near-sdk = "0.9.2"
uint = { version = "0.8.2", default-features = false }
wee_alloc = { version = "0.4.5", default-features = false, features = [] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

