[package]
name = "staking-pool"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
borsh = "*"
near-sdk = "0.9.2"
uint = { version = "0.8.3", default-features = false }
wee_alloc = { version = "0.4.5", default-features = false, features = [] }

[dev-dependencies]
lazy_static = "1.4.0"
quickcheck = "0.9"
quickcheck_macros = "0.9"
log = "0.4"
env_logger = { version = "0.7.1", default-features = false }

[dev-dependencies.near-runtime-standalone]
version = "0.1.0"
git = "https://github.com/nearprotocol/nearcore.git"
branch = "fckt/standalone-runitme-patch"

[dev-dependencies.near-primitives]
git = "https://github.com/nearprotocol/nearcore.git"
version = "0.1.0"
branch = "fckt/standalone-runitme-patch"

[dev-dependencies.near-crypto]
git = "https://github.com/nearprotocol/nearcore.git"
version = "0.1.0"
branch = "fckt/standalone-runitme-patch"
