[package]
name = "state-manipulation"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
near-sys = "0.1"
wee_alloc = "0.4"

[dev-dependencies]
tokio = { version = "1.10.0", features = ["full"] }
workspaces = "0.2"
anyhow = "1.0"
arbitrary = { version = "1.0", features = ["derive"] }
rand_xorshift = "0.3"
rand = "0.8.3"

[features]
default = ["clean", "replace"]
clean = []
replace = []
