[package]
name = "w_near"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>", "Vincent <vincent@decentralisedengineeringltd.co.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs" }
near-contract-standards = { git = "https://github.com/near/near-sdk-rs" }
# near-sdk = { version = "=3.0.0-pre.3" }
# near-contract-standards = { version = "=3.0.0-pre.3"}

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
