[package]
name = "w_near"
version = "1.0.0"
authors = ["Near Inc <hello@nearprotocol.com>", "Vincent <vincent@decentralisedengineeringltd.co.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.1"
near-contract-standards = "4.0.0-pre.1"

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.1"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
