[package]
name = "w_near"
version = "1.0.0"
authors = ["Near Inc <hello@nearprotocol.com>", "Vincent <vincent@decentralisedengineeringltd.co.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0-pre.6"
near-contract-standards = "4.0.0-pre.6"

[dev-dependencies]
anyhow = "1.0"
near-primitives = "0.5.0"
near-units = "0.2.0"
tokio = { version = "1.14", features = ["full"] }
workspaces = "0.1.1"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
